# puccinialin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/puccinialin/: __init__.py  __main__.py  _setup_rust.py  _target.py
